{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 25,
  "lineage": "87d1e927-eacc-8378-3d0e-e207c54ff953",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ClusterPublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034a221ce384d98fe",
            "association_id": "eipassoc-0495db264afec3e44",
            "domain": "vpc",
            "id": "eipalloc-034a221ce384d98fe",
            "instance": "i-0f745cad18e718274",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0292adcf105c81b8d",
            "private_dns": "ip-20-1-0-10.us-east-2.compute.internal",
            "private_ip": "20.1.0.10",
            "public_dns": "ec2-3-22-69-252.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.69.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.fgtactive",
            "aws_network_interface.eth0",
            "aws_network_interface.eth1",
            "aws_network_interface.eth2",
            "aws_network_interface.eth3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "MGMTPublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f9c71ce1e5307ca",
            "association_id": "eipassoc-09a186123eb3277e6",
            "domain": "vpc",
            "id": "eipalloc-00f9c71ce1e5307ca",
            "instance": "i-0f745cad18e718274",
            "network_border_group": "us-east-2",
            "network_interface": "eni-044c92dc0899ff387",
            "private_dns": "ip-20-1-3-10.us-east-2.compute.internal",
            "private_ip": "20.1.3.10",
            "public_dns": "ec2-3-138-93-46.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.93.46",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.fgtactive",
            "aws_network_interface.eth0",
            "aws_network_interface.eth1",
            "aws_network_interface.eth2",
            "aws_network_interface.eth3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "PassiveMGMTPublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07968d365c564718d",
            "association_id": "eipassoc-07dcb284a562a41f4",
            "domain": "vpc",
            "id": "eipalloc-07968d365c564718d",
            "instance": "i-0f0a3789c674beb08",
            "network_border_group": "us-east-2",
            "network_interface": "eni-089e485cae270283c",
            "private_dns": "ip-20-1-13-10.us-east-2.compute.internal",
            "private_ip": "20.1.13.10",
            "public_dns": "ec2-3-139-30-245.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.30.245",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.fgtactive",
            "aws_instance.fgtpassive",
            "aws_network_interface.eth0",
            "aws_network_interface.eth1",
            "aws_network_interface.eth2",
            "aws_network_interface.eth3",
            "aws_network_interface.passiveeth0",
            "aws_network_interface.passiveeth1",
            "aws_network_interface.passiveeth2",
            "aws_network_interface.passiveeth3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fgtactive",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9573e8922715847",
            "arn": "arn:aws:ec2:us-east-2:363412468025:instance/i-0f745cad18e718274",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0718116a7fe09f8df",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "emoranftghaiamrole",
            "id": "i-0f745cad18e718274",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c6g.xlarge",
            "ipv6_address_count": 0,
            "key_name": "ohio-ftg-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0292adcf105c81b8d"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-038679c32c252bdbf"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_card_index": 0,
                "network_interface_id": "eni-0c3dfc6c0829baaa4"
              },
              {
                "delete_on_termination": false,
                "device_index": 3,
                "network_card_index": 0,
                "network_interface_id": "eni-044c92dc0899ff387"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0292adcf105c81b8d",
            "private_dns": "ip-20-1-0-10.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.1.0.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0c2f3d17da95c432f",
                "volume_size": 2,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05affaa5d4baf73c5",
            "tags": {
              "Name": "FortiGateVM Active"
            },
            "tags_all": {
              "Name": "FortiGateVM Active"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c63dc8fb9a206a66",
              "sg-0d4a7252cbd55eb0b"
            ]
          },
          "dependencies": [
            "aws_network_interface.eth0",
            "aws_network_interface.eth1",
            "aws_network_interface.eth2",
            "aws_network_interface.eth3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fgtpassive",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9573e8922715847",
            "arn": "arn:aws:ec2:us-east-2:363412468025:instance/i-0f0a3789c674beb08",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-09dcfc4bd95b788d8",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "emoranftghaiamrole",
            "id": "i-0f0a3789c674beb08",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c6g.xlarge",
            "ipv6_address_count": 0,
            "key_name": "ohio-ftg-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0e23eeb3d5f0cf679"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-071737a60d58d98e7"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_card_index": 0,
                "network_interface_id": "eni-045c1cb73704241d9"
              },
              {
                "delete_on_termination": false,
                "device_index": 3,
                "network_card_index": 0,
                "network_interface_id": "eni-089e485cae270283c"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e23eeb3d5f0cf679",
            "private_dns": "ip-20-1-10-10.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.1.10.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0bdf32dba2dfa7ec5",
                "volume_size": 2,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08cb34f3b0df12746",
            "tags": {
              "Name": "FortiGateVM Passive"
            },
            "tags_all": {
              "Name": "FortiGateVM Passive"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c63dc8fb9a206a66",
              "sg-0d4a7252cbd55eb0b"
            ]
          },
          "dependencies": [
            "aws_instance.fgtactive",
            "aws_network_interface.eth0",
            "aws_network_interface.eth1",
            "aws_network_interface.eth2",
            "aws_network_interface.eth3",
            "aws_network_interface.passiveeth0",
            "aws_network_interface.passiveeth1",
            "aws_network_interface.passiveeth2",
            "aws_network_interface.passiveeth3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363412468025:network-interface/eni-0292adcf105c81b8d",
            "description": "active-port1",
            "id": "eni-0292adcf105c81b8d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:3c:89:2d:3a:91",
            "owner_id": "363412468025",
            "private_ip": "20.1.0.10",
            "private_ip_list": [
              "20.1.0.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.1.0.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c63dc8fb9a206a66",
              "sg-0d4a7252cbd55eb0b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05affaa5d4baf73c5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363412468025:network-interface/eni-038679c32c252bdbf",
            "description": "active-port2",
            "id": "eni-038679c32c252bdbf",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:a8:36:5b:f5:53",
            "owner_id": "363412468025",
            "private_ip": "20.1.1.10",
            "private_ip_list": [
              "20.1.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.1.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0287e97820e518d94",
              "sg-0d4a7252cbd55eb0b"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-070f10c6a8557d31a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363412468025:network-interface/eni-0c3dfc6c0829baaa4",
            "description": "active-port3",
            "id": "eni-0c3dfc6c0829baaa4",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:e5:95:39:d1:25",
            "owner_id": "363412468025",
            "private_ip": "20.1.2.10",
            "private_ip_list": [
              "20.1.2.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.1.2.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0287e97820e518d94",
              "sg-0d4a7252cbd55eb0b"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0684667f76ea3a958"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363412468025:network-interface/eni-044c92dc0899ff387",
            "description": "active-port4",
            "id": "eni-044c92dc0899ff387",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:09:50:c2:f8:3b",
            "owner_id": "363412468025",
            "private_ip": "20.1.3.10",
            "private_ip_list": [
              "20.1.3.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.1.3.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c63dc8fb9a206a66",
              "sg-0d4a7252cbd55eb0b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d220b35abcc8f9d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "passiveeth0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363412468025:network-interface/eni-0e23eeb3d5f0cf679",
            "description": "passive-port1",
            "id": "eni-0e23eeb3d5f0cf679",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:78:f6:90:a4:e9",
            "owner_id": "363412468025",
            "private_ip": "20.1.10.10",
            "private_ip_list": [
              "20.1.10.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.1.10.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c63dc8fb9a206a66",
              "sg-0d4a7252cbd55eb0b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08cb34f3b0df12746"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "passiveeth1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363412468025:network-interface/eni-071737a60d58d98e7",
            "description": "passive-port2",
            "id": "eni-071737a60d58d98e7",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:5b:27:d5:b0:5d",
            "owner_id": "363412468025",
            "private_ip": "20.1.11.10",
            "private_ip_list": [
              "20.1.11.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.1.11.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0287e97820e518d94",
              "sg-0d4a7252cbd55eb0b"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0295711a925c613bb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "passiveeth2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363412468025:network-interface/eni-045c1cb73704241d9",
            "description": "passive-port3",
            "id": "eni-045c1cb73704241d9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:97:31:1a:26:cd",
            "owner_id": "363412468025",
            "private_ip": "20.1.12.10",
            "private_ip_list": [
              "20.1.12.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.1.12.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0287e97820e518d94",
              "sg-0d4a7252cbd55eb0b"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0b1767eeb11ff8c03"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "passiveeth3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363412468025:network-interface/eni-089e485cae270283c",
            "description": "passive-port4",
            "id": "eni-089e485cae270283c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:76:cf:46:2f:b3",
            "owner_id": "363412468025",
            "private_ip": "20.1.13.10",
            "private_ip_list": [
              "20.1.13.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.1.13.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c63dc8fb9a206a66",
              "sg-0d4a7252cbd55eb0b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cce13e096f6e0da2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363412468025:security-group/sg-0287e97820e518d94",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0287e97820e518d94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow All",
            "name_prefix": "",
            "owner_id": "363412468025",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Allow"
            },
            "tags_all": {
              "Name": "Public Allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-060fdd524e9f8afc1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363412468025:security-group/sg-0c63dc8fb9a206a66",
            "description": "Public Allow traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c63dc8fb9a206a66",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "Public Allow",
            "name_prefix": "",
            "owner_id": "363412468025",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Allow"
            },
            "tags_all": {
              "Name": "Public Allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-060fdd524e9f8afc1"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}